[project]
name = "astarconf"
version = "0.1.0"
description = "A secure, pluggable config loader with encryption and CLI tools"
readme = "README.md"
authors = [{ name = "Andrey Starkov", email = "andr.starkov@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["config", "yaml", "encryption", "cli", "dotenv", "secure"]
dependencies = [
    "pyyaml",
    "cryptography",
    "python-dotenv"
]

[project.scripts]
astarconf = "astarconf:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
